[project]
name = "learning-assistent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
    "asyncio>=4.0.0",
    "deepagents>=0.3.0",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "langgraph>=0.6.5",
    "langchain-mcp-adapters>=0.2.1",
    "langchain[openai]>=1.1.3",
    "pydantic>=2.12.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
